@startuml Therapeut

skinparam classAttributeIconSize 0

package java {
    package util {
        class UUID
        interface List<T>
    }

    package time {
        class LocalDate
        class LocalDateTime
    }

    LocalDate .right[hidden].> LocalDateTime
}

package jakarta.persistence {
    interface "@Entity" as Entity
    interface "@Table" as Table

    Entity -[hidden]down-> Table
    LocalDateTime .up[hidden].> Table
}

package com.acme.therapeut {
    package entity #DDDDDD {
        class Adresse << entity >> {
            @Id @GeneratedValue @JsonIgnore id : UUID
            plz: String
            ort: String
        }
        Adresse ..> UUID

        enum GeschlechtType {
            MAENNLICH
            WEIBLICH
            DIVERS
        }

        enum TaetigkeitsbereichType {
        PHYSIO
        MASSAGE
        DIAET
        }

        class Therapeut << entity >>  << @Entity >>  << @Table >> {
            @Id @GeneratedValue id : UUID
            @Version version : int
            nachname : String
            vorname : String
            email : String
            mitgliedId : UUID
            geburtsdatum: LocalDate
            @Convert geschlecht: GeschlechtType
            @ElementCollection @CollectionTable @Column @Convert taetigkeitsbereiche: List<TaetigkeitsbereichType>
            @CreationTimestamp erzeugt: LocalDateTime
            @UpdateTimestamp aktualisiert: LocalDateTime
        }

        Therapeut *--> "1" Adresse :  @OneToOne(cascade = [...]) @JoinColumn(...) adresse

        Therapeut .up.> GeschlechtType
        Therapeut .up.> TaetigkeitsbereichType

        Therapeut ..> URL
        Therapeut ..> LocalDate
        Therapeut ..> LocalDateTime
        Therapeut .right.> List
        Therapeut .right.> Entity
        Therapeut .right.> Table

        GeschlechtType .[hidden].> List
    }
}

hide empty members

@enduml
